--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-mbb-build",
   "description": "mbb F2E build tool",
-  "version": "0.1.3",
+  "version": "0.1.5",
   "homepage": "https://github.com/hellolibo/grunt-mbb-build",
   "author": {
     "name": "hellolibo",
@@ -15,10 +15,12 @@
   "bugs": {
     "url": "https://github.com/hellolibo/grunt-mbb-build/issues"
   },
-  "licenses": [{
-    "type": "MIT",
-    "url": "https://github.com/hellolibo/grunt-mbb-build/blob/master/LICENSE-MIT"
-  }],
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/hellolibo/grunt-mbb-build/blob/master/LICENSE-MIT"
+    }
+  ],
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -38,7 +40,8 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-cssmin": "~0.6.1",
     "grunt-contrib-clean": "~0.4.1",
-    "grunt-text-replace": "0.3.7"
+    "grunt-text-replace": "0.3.7",
+    "crypto":"0.0.3"
   },
   "peerDependencies": {
     "grunt": "~0.4.1"
@@ -47,8 +50,8 @@
     "gruntplugin",
     "gruntcollection"
   ],
-  "readme": "# grunt-mbb-build\r\n\r\n> mbb build tool\r\n\r\n## Getting Started\r\nThis plugin requires Grunt `~0.4.1`\r\n\r\nIf you haven't used [Grunt](http://gruntjs.com/) before, be sure to check out the [Getting Started](http://gruntjs.com/getting-started) guide, as it explains how to create a [Gruntfile](http://gruntjs.com/sample-gruntfile) as well as install and use Grunt plugins. Once you're familiar with that process, you may install this plugin with this command:\r\n\r\n```shell\r\nnpm install grunt-mbb-build --save-dev\r\n```\r\n\r\nOnce the plugin has been installed, it may be enabled inside your Gruntfile with this line of JavaScript:\r\n\r\n```js\r\ngrunt.loadNpmTasks('grunt-mbb-build');\r\n```\r\n\r\n## The \"mbb_build\" task\r\n\r\n### Overview\r\nIn your project's Gruntfile, add a section named `mbb_build` to the data object passed into `grunt.initConfig()`.\r\n\r\n```js\r\ngrunt.initConfig({\r\n  mbb_build: {\r\n    options: {\r\n      // Task-specific options go here.\r\n    },\r\n    your_target: {\r\n      // Target-specific file lists and/or options go here.\r\n    },\r\n  },\r\n})\r\n```\r\n\r\n### Options\r\n\r\n#### options.separator\r\nType: `String`\r\nDefault value: `',  '`\r\n\r\nA string value that is used to do something with whatever.\r\n\r\n#### options.punctuation\r\nType: `String`\r\nDefault value: `'.'`\r\n\r\nA string value that is used to do something else with whatever else.\r\n\r\n### Usage Examples\r\n\r\n#### Default Options\r\nIn this example, the default options are used to do something with whatever. So if the `testing` file has the content `Testing` and the `123` file had the content `1 2 3`, the generated result would be `Testing, 1 2 3.`\r\n\r\n```js\r\ngrunt.initConfig({\r\n  mbb_build: {\r\n    options: {},\r\n    files: {\r\n      'dest/default_options': ['src/testing', 'src/123'],\r\n    },\r\n  },\r\n})\r\n```\r\n\r\n#### Custom Options\r\nIn this example, custom options are used to do something else with whatever else. So if the `testing` file has the content `Testing` and the `123` file had the content `1 2 3`, the generated result in this case would be `Testing: 1 2 3 !!!`\r\n\r\n```js\r\ngrunt.initConfig({\r\n  mbb_build: {\r\n    options: {\r\n      separator: ': ',\r\n      punctuation: ' !!!',\r\n    },\r\n    files: {\r\n      'dest/default_options': ['src/testing', 'src/123'],\r\n    },\r\n  },\r\n})\r\n```\r\n\r\n## Contributing\r\nIn lieu of a formal styleguide, take care to maintain the existing coding style. Add unit tests for any new or changed functionality. Lint and test your code using [Grunt](http://gruntjs.com/).\r\n\r\n## Release History\r\n_(Nothing yet)_\r\n",
+  "readme":"# grunt-mbb-build\r\n\r\n麦包包内部静态文件打包工具，修改于已经消失了的grunt-spm-build。\r\n\r\n## 增加功能\r\n\r\n  样式表图片相对路径转绝对路径\r\n  样式表图片路径md5字符戳\r\n  编译目录中的.handlebars文件\r\n\r\n## 命令\r\n  grunt build\r\n  grunt hbs\r\n",
   "readmeFilename": "README.md",
-  "_id": "grunt-mbb-build@0.1.0",
-  "_from": "grunt-mbb-build@~0.1.0"
+  "_id": "grunt-mbb-build@0.1.5",
+  "_from": "grunt-mbb-build@~0.1.4"
 }
